[package]
name = "rust-tcp-server"
version = "0.1.0"
authors = ["Joe Mooney <joe.mooney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
thiserror = "1.0.24"
anyhow = "1.0.40"

